syntax = "proto3";

package astria.sequencer.v1alpha1;

import "astria/primitive/v1/types.proto";

message AssetBalance {
  string denom = 1;
  astria.primitive.v1.Uint128 balance = 2;
}

// A response containing the balance of an account.
message BalanceResponse {
  uint64 height = 2;
  repeated AssetBalance balances = 3;
}

// A response containing the current nonce for an account.
message NonceResponse {
  uint64 height = 2;
  uint32 nonce = 3;
}
